--- a/build.gradle
+++ b/build.gradle
@@ -621,6 +621,11 @@ dependencies {
     implementation "org.opensaml:opensaml-storage-api:${open_saml_version}"
 
     implementation "com.nulab-inc:zxcvbn:1.9.0"
+    implementation 'com.nimbusds:oauth2-oidc-sdk:11.18'
+    implementation 'net.minidev:json-smart:2.5.1'
+    implementation 'com.nimbusds:content-type:2.3'
+
+    testImplementation 'org.apache.camel:camel-xmlsecurity:3.22.2'
 
     runtimeOnly 'com.google.guava:failureaccess:1.0.2'
     runtimeOnly 'org.apache.commons:commons-text:1.11.0'
